# wordle-operator

./: Dockerfile  README.md  calculate_word.py  guess.yaml  pyproject.toml  wordle-operator.yaml  wordle_operator.py  wordlist.py
.github/workflows/: publish-docker.yaml
